# dev-tunnels

./: .gitignore  CONTRIBUTING.md  NOTICE.txt  Package.swift  README.md  SUPPORT.md  go.mod  go.sum  prd.json  progress.txt  version.json
.github/: pull_request_template.md
.github/workflows/: auto-comment.yml  check-basis.yml  codeQL.yml  codeql-analysis.yml  csharp-pr-build.yml  go.yml  java-sdk-release.yml  maven.yml  rust.yml  swift.yml  test.yml  typescript-pr-build.yml
.pipelines/: cs-build-steps.yaml  cs-ci-build.yaml  cs-pr-build.yaml  csharp-build-and-publish.yaml  csharp-build-steps.yaml  csharp-pr-build.yaml  rust-build-steps.yaml  rust-pr-build.yaml  symbols-aad-test.yaml  typescript-build-and-publish.yaml  typescript-build-steps.yaml  typescript-build.yaml  typescript-pr-build.yaml
Java/: .editorconfig  .gitignore  pom.xml
TypeScript/: .npmrc  .prettierrc  README-dev.md  build.js  package.json  tsconfig.eslint.json
cs/: .editorconfig  .gitignore  Directory.Build.props  Directory.Build.targets  NuGet.config  TunnelsSDK.sln  global.json  version.json
cs/src/: Directory.Build.props  Directory.Build.targets  TunnelsSDK.sln
csharp/: Directory.Build.props  NuGet.config  dirs.proj  global.json  version.json
csharp/src/: dirs.proj
go/: LICENSE  access_scopes.go  buffer.go  client.go  client_test.go  extensions.go  forwarded_ports.go  go.mod  go.sum  host.go  host_server.go  host_test.go  live_share_relay_tunnel_endpoint.go  local_network_tunnel_endpoint.go  manager.go  manager_test.go  problem_details.go  providers.go  remote_forwarded_ports.go  request_options.go  service_version_details.go  socket.go  ssh.go  tunnel.go  tunnelAccessScopes.go  tunnelRequestOptions.go  tunnel_access_control.go  tunnel_access_control_entry.go  tunnel_access_control_entry_type.go  tunnel_access_scopes.go  tunnel_access_subject.go  tunnel_authentication_schemes.go  tunnel_connection_mode.go  tunnel_constraints.go  tunnel_endpoint.go  tunnel_header_names.go  tunnel_options.go  tunnel_port.go  tunnel_port_status.go  tunnel_protocol.go  (+4 more)
go/examples/: example.go  getting_started.md
go/ssh/: client_session.go  forwarded_ports.go  host_session.go  local_port_forwarder.go  local_port_forwarder_test.go  port_forwarding_manager.go  request.go  session.go  session_test.go  ssh.go
go/test/: relay_server.go  socket_conn.go
go/tunnels/: PUBLISHING.md  access_scopes.go  client.go  client_test.go  cluster_availability.go  cluster_details.go  cluster_recommendation.go  cluster_recommendation_response.go  connection_status.go  error_codes.go  error_detail.go  host.go  host_e2e_test.go  host_reconnect.go  host_test.go  id_generation.go  inner_error_detail.go  manager.go  manager_test.go  problem_details.go  program.go  remote_forwarded_ports.go  request_options.go  resource_status.go  service_version_details.go  socket.go  tunnel.go  tunnel_access_control.go  tunnel_access_control_entry.go  tunnel_access_control_entry_type.go  tunnel_access_scopes.go  (+28 more)
goTunnels/: access_scopes.go  buffer.go  client.go  client_test.go  manager.go  manager_test.go  problem_details.go  remote_forwarded_ports.go  request_options.go  resource_status.go  service_version_details.go  socket.go  tunnel.go  tunnel_access_control.go  tunnel_access_control_entry.go  tunnel_access_control_entry_type.go  tunnel_access_scopes.go  tunnel_access_subject.go  tunnel_authentication_schemes.go  tunnel_connection_mode.go  tunnel_constraints.go  tunnel_endpoint.go  tunnel_header_names.go  tunnel_options.go  tunnel_port.go  tunnel_port_status.go  tunnel_protocol.go  tunnel_service_properties.go  tunnel_status.go  tunnels.go
java/: .editorconfig  .gitignore  README.md  pom.xml
rs/: CONTRIBUTING.md  Cargo.toml
rs/src/: lib.rs  tunnel.rs
rs/src/connections/: errors.rs  host_relay.rs  io.rs  mod.rs  relay_tunnel_client.rs  relay_tunnel_host.rs  ws.rs
rs/src/contracts/: cluster_availability.rs  cluster_details.rs  cluster_recommendation.rs  cluster_recommendation_response.rs  error_codes.rs  error_detail.rs  inner_error_detail.rs  live_share_relay_tunnel_endpoint.rs  local_network_tunnel_endpoint.rs  mod.rs  named_rate_status.rs  problem_details.rs  program.rs  rate_status.rs  resource_status.rs  serialization.rs  service_version_details.rs  tunnel.rs  tunnel_access_control.rs  tunnel_access_control_entry.rs  tunnel_access_control_entry_type.rs  tunnel_access_scopes.rs  tunnel_access_subject.rs  tunnel_authentication_schemes.rs  tunnel_base.rs  tunnel_connection_mode.rs  tunnel_constraints.rs  tunnel_endpoint.rs  tunnel_endpoint_query_parameters.rs  tunnel_environments.rs  tunnel_event.rs  tunnel_header_names.rs  tunnel_list_by_region.rs  tunnel_list_by_region_response.rs  tunnel_list_response.rs  tunnel_options.rs  tunnel_port.rs  tunnel_port_list_response.rs  tunnel_port_status.rs  tunnel_port_v2.rs  (+10 more)
rs/src/management/: authorization.rs  authorization_provider.rs  errors.rs  http_client.rs  id_generation.rs  mod.rs  policy_provider.rs  tunnel_locator.rs  tunnel_request_options.rs
rs/test/: tunnels_test.rs
swift/: .gitignore  Package.swift  README.md
ts/: .eslintrc.js  .npmrc  README-dev.md  build.js  package-lock.json  package.json  tsconfig.json  tslint.json  version.json
ts-mocha-trx-reporter/: README.md  package-lock.json  package.json  tsconfig.json
(+516 files in other folders)
