[package]
name = "tunnels"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"], default-features = false }
reqwest = { version = "0.11", features = ["default", "json"] }
url = "2"
opentelemetry = { version = "0.20", features = ["trace"], optional = true }
serde_json = "1"
async-trait = "0.1"
thiserror = "1.0"
log = "0.4"
tokio = { version = "1.20", features = ["macros", "io-util", "time"], optional = true }
tokio-util = { version = "0.7", optional = true }
tokio-tungstenite = { version = "0.20", optional = true, features = ["native-tls"] }
futures = { version = "0.3", optional = true }
tungstenite = { version = "0.20", optional = true, features = ["native-tls"] }
uuid = { version = "1.4", features = ["v4"], optional = true }
rand = "0.8.5"
russh = { version = "0.37.1", default-features = false, features = ["openssl", "flate2"], optional = true }
russh-keys = { version = "0.37.1", default-features = false, features = ["openssl"], optional = true }
hyper = "0.14"
os_info = { version = "3", default-features = false }

[target.'cfg(windows)'.dependencies]
winreg = "0.8"
urlencoding = "2.1.3"

[dev-dependencies]
tokio = { version = "1.20", features = ["full"] }
rand = "0.8"
regex = "1"

[features]
default = []
end_to_end = []
instrumentation = ["dep:opentelemetry"]
connections = [
  "dep:tokio",
  "dep:tokio-util",
  "dep:futures",
  "dep:tokio-tungstenite",
  "dep:tungstenite",
  "dep:uuid",
  "dep:russh",
  "dep:russh-keys",
]
vendored-openssl = [
  "reqwest/native-tls-vendored",
  "tokio-tungstenite?/native-tls-vendored",
  "tungstenite?/native-tls-vendored",
  "russh?/vendored-openssl",
  "russh-keys?/vendored-openssl"
]
